SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

#1084 Added MariaDB driver to default driver list



3.5.0 (5/5/2013)
==================

Enhancements:

Updated Italian translations. Thanks to Ivo Neri.

Updated French translations. Thanks to Erwan Duroselle.

SQL script save/open dialog remembers the last selected file name extension.

DBCopy-Plugin: Added table name suggestion to "Paste table as ..."
  dialog when a table is selected in the destination Object tree.

Update Tab (in Global Preferences): Added hint/link to Proxy configuration.

Added support for the JTattoo suite of Look-and-Feel classes to the Look-and-Feel plugin.  Thanks to Michael
Hagen (JTattoo author) for integration tips.

New function to open recent and/or favourite sql script files in the SQL editor.
  Available in the SQL editor's and the Aliase's toolbar.
  Look for the icon showing a folder with a watch .


Patch #57 Additional features for dataimport plugin.
  New checkbox in data import dialog that allows to input rows with over 100.000 characters.
  Thanks to Phillip (P_W999) for the patch

Logging of application shutdown:
  Sometimes closing SQuirreL can take some time. From looking at the log file
  one can find out which shutdown actions take long:
  Choose log level: info
  Search the log file for: "Application.shutdown"
  The first Global preferences tab tells where log and log configuration files are.


Introduced keyboard shortcut Ctrl+Shift+Enter to rerun SQL results.
  Thanks to Johnathan James for re-working and drawing attention to the patch hosted at
  http://muzso.hu/2011/06/04/patch-for-squirrel-sql-client-v3.2.1-adds-keyboard-shortcut-for-sql-query-rerun-re-execut
  See also bug #1057.
