@@ -1,4 +1,6 @@
-package net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause;
+package net.sourceforge.squirrel_sql.client.session;
+
+import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IWhereClausePart;
 
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
@@ -12,7 +14,7 @@ import java.util.List;
 public interface IWhereClausePartUtil {
 
 	/**
-	 * Creates an where clause from a list of {@link IWhereClausePart}
+	 * Creates an where clause from a list of {@link net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IWhereClausePart}
 	 * @param whereClauseParts list of where clause parts
 	 * @return the where clause, or <code>null</code>, if no suitable part of an where clause is avaiable
 	 */
@@ -22,14 +24,16 @@ public interface IWhereClausePartUtil {
 	/**
 	 * Sets the parameter values into the PreparedStatements, if any exists.
 	 * Setting the parameter value will start at the given position.
-	 * @param pstmt PreparedStatement, which contains the where clause.
-	 * @param whereClauseParts parts of the where clause from this prepared statement.
-	 * @param firstPosition The position of the first parameter, which should be set.
-	 * @return The next index-position after setting the parameters
+	 *
+    * @param pstmt PreparedStatement, which contains the where clause.
+    * @param whereClauseParts parts of the where clause from this prepared statement.
+    * @param firstPosition The position of the first parameter, which should be set.
+    * @param countResult
+    * @return The next index-position after setting the parameters
 	 * @throws SQLException If an exception occurs while setting the parameters
 	 */
 	public abstract int setParameters(PreparedStatement pstmt,
-			List<IWhereClausePart> whereClauseParts, int firstPosition)
+                                     List<IWhereClausePart> whereClauseParts, int firstPosition, CountResult countResult)
 			throws SQLException;
 
 	/**
